// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductBadge should display the discount if product is discounted 1`] = `
<glamorous(div)
  animated={false}
  animatedDirection="left"
  onClick={[Function]}
>
  <MarketingFlag
    promotionCode="0"
    topLeftStyle={
      Object {
        "&>img": Object {
          "marginLeft": "-5px !important",
          "marginTop": "-4px",
        },
      }
    }
    topRightStyle={
      Object {
        "&>img": Object {
          "marginRight": "12px !important",
        },
      }
    }
    wrapperStyle={
      Object {
        "justifyContent": "space-between !important",
        "padding": "0px !important",
        "position": "absolute",
      }
    }
  />
  <Image
    fixBrightColor={false}
    imageOptions={
      Object {
        "height": 405,
        "width": 405,
      }
    }
    zoomable={false}
  />
  <glamorous(div) />
  <glamorous(div)>
    <glamorous(p)>
      -
      5
       %
    </glamorous(p)>
    <glamorous(div)
      isBarred={true}
    >
      15,00
       €
    </glamorous(div)>
    <glamorous(div)
      discounted={true}
    >
      10,00
       €
    </glamorous(div)>
  </glamorous(div)>
  <glamorous(div)>
    <p />
  </glamorous(div)>
</glamorous(div)>
`;

exports[`ProductBadge should not display the discount if product is not discounted 1`] = `
<glamorous(div)
  animated={false}
  animatedDirection="left"
  onClick={[Function]}
>
  <MarketingFlag
    promotionCode="0"
    topLeftStyle={
      Object {
        "&>img": Object {
          "marginLeft": "-5px !important",
          "marginTop": "-4px",
        },
      }
    }
    topRightStyle={
      Object {
        "&>img": Object {
          "marginRight": "12px !important",
        },
      }
    }
    wrapperStyle={
      Object {
        "justifyContent": "space-between !important",
        "padding": "0px !important",
        "position": "absolute",
      }
    }
  />
  <Image
    fixBrightColor={false}
    imageOptions={
      Object {
        "height": 405,
        "width": 405,
      }
    }
    zoomable={false}
  />
  <glamorous(div) />
  <glamorous(div)>
    <glamorous(div)>
       €
    </glamorous(div)>
  </glamorous(div)>
  <glamorous(div)>
    <p />
  </glamorous(div)>
</glamorous(div)>
`;

exports[`ProductBadge should return null when productInfo is empty 1`] = `null`;
